--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+MYAPP_RELEASE_STORE_FILE=hadits-arbain-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=hadits-arbain-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=140298
+MYAPP_RELEASE_KEY_PASSWORD=140298
